--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "Full-stack chat application using MERN stack.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongodb": "^4.0.7",
