--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.2",
     "react-router-dom": "^6.26.1",
     "tailwind-merge": "^2.5.2",
