--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-resizable-panels": "^2.1.2",
     "react-router-dom": "^6.26.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
