--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc && node server/dist/index.js",
+    "start": "node server/dist/index.js",
+    "build": "npm install && npx tsc -b && npm install --prefix client && npm run build --prefix client",
     "dev": "nodemon server/index.ts"
   },
   "keywords": [],
