--- a/package.json
+++ b/package.json
@@ -11,16 +11,6 @@
   "author": "Vusal Huseynov",
   "license": "ISC",
   "description": "Full-stack chat application using MERN stack.",
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/mongodb": "^4.0.7",
-    "@types/node": "^22.5.1",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -33,6 +23,14 @@
     "mongoose": "^8.6.0",
     "path": "^0.12.7",
     "socket.io": "^4.7.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^22.5.1",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2"
   }
 }
